Fixed Light/Dark Mode Bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@ font-family: 'Roboto', sans-serif; */
   }
 
   body {
-    @apply w-9/10 min-h-screen mx-auto relative
+    @apply w-9/10 bg-secondary-100 min-h-screen mx-auto relative
   }
 
   .home {
@@ -47,22 +47,4 @@ font-family: 'Roboto', sans-serif; */
   .index {
     z-index: 1;
   }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
